[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libgeosuitepvt"
version = "0.1.0"
description = "Standalone parser for GeoSuite PVT files."
readme = "README.md"
license = {text = "GPL3"}
requires-python = ">=3.10"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]
include = ["geosuitepvt_parser*"]
