[project]
name = "libgeosuitepvt"
version = "0.1.0"
description = "Standalone parser for GeoSuite PVT files."
authors = [{name = "DPE", email = ""}]
readme = "README.md"
license = {text = "GPL3"}
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"